# OS_labs

1lab/: CMakeLists.txt  README.md
1lab/src/: child.c  parent.c
2lab/: CMakeLists.txt  dice_sim.c  Авезов Рустем_212.docx
3lab/: CMakeLists.txt  client.c  server.c  Авезов Рустем_212.docx
4lab/: CMakeLists.txt  math_function.h  method1.c  method2.c  program1.c  program2.c
